--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <script src="js/lib/jquery-3.3.1.min.js"></script>
     <script src="js/lib/jquery.url.js"></script>
     <script src="js/wallet.js"></script>
+    <link rel="stylesheet" href="css/wallet.css">
 </head>
 
 <body>
